--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
 }
 
 p {
-	font-size: 1rem;
+	font-size: 0.9rem;
 }
 
 h2 {
@@ -25,7 +25,7 @@ h3 {
 	padding: 10px;
 	border-radius: 40px;
 	margin-inline: 20px;
-	margin-block: 15px;
+	margin-bottom: 10px;
 }
 .rounded_inner {
 	/* margin-top: 20px; */
@@ -41,18 +41,18 @@ h3 {
 /* Performance section */
 .performance {
 	display: flex;
-	gap: 20px;
+	gap: 10px;
 }
 .performance_left {
 	background-color: #a2a0a0;
 	flex: 1;
-	padding: 10px;
+	/* padding: 10px; */
 }
 
 .performance_right {
 	background-color: #a2a0a0;
 	flex: 1;
-	padding: 10px;
+	/* padding: 10px; */
 }
 .performance_icon_text {
 	display: flex;
@@ -61,6 +61,7 @@ h3 {
 /* Image Section */
 .image_section {
 	display: flex;
+	gap: 10px;
 	justify-content: space-between;
 }
 .image_section_detail {
@@ -70,7 +71,6 @@ h3 {
 
 .image_section_text {
 	display: flex;
-	align-items: center;
 }
 .image_section_text_number {
 	font-size: 3rem;
@@ -80,9 +80,9 @@ h3 {
 .market_info {
 	background-color: #e7eeee;
 	/* opacity: 0.1; */
-	padding-block: 10px;
+	padding-block: 5px;
 	border-radius: 15px;
-	margin-block: 20px;
+	margin-block: 10px;
 }
 .market_info_section {
 	display: flex;
@@ -124,6 +124,7 @@ h3 {
 	display: flex;
 	gap: 10px;
 	align-items: center;
+	margin-bottom: -25px;
 }
 
 .stock_market_dot {
