--- a/style.css
+++ b/style.css
@@ -1,20 +1,25 @@
 body {
 	/* background-color: blue; */
+	margin: 0;
 }
 
 p {
-	font-size: 0.9rem;
+	font-size: 0.9em;
 	font-family: "Inter", sans-serif;
+	font-weight: 500;
 }
 
 h2 {
-	font-size: 1.5rem;
+	font-size: 1.2rem;
 	color: #0eb3a9;
+	font-family: "Inter", sans-serif;
+	margin: 0;
 }
 
 h3 {
 	font-size: 1rem;
 	color: #0eb3a9;
+	font-family: "Inter", sans-serif;
 }
 
 /* First section */
@@ -23,20 +28,97 @@ h3 {
 }
 .rounded {
 	background-color: #0eb3a9;
-	padding: 10px;
+	padding: 5px;
 	border-radius: 40px;
 	margin-inline: 20px;
 	margin-bottom: 10px;
 }
 .rounded_inner {
-	/* margin-top: 20px; */
 	background-color: #0eb3a9;
 	color: white;
 	border-radius: 40px;
-	padding-block: 10px;
-	padding-inline-start: 100px;
-	padding-inline-end: 20px;
 	border: 2px solid white;
+	padding-inline: 10px;
+}
+
+.bell_rounded {
+	background-color: #0eb3a9;
+	border-radius: 50%;
+	height: 100px;
+	width: 100px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin-left: -0.5em;
+	margin-top: -4em;
+	box-shadow: 1px 5px rgba(0, 0, 0, 0.438);
+	position: relative;
+	float: left;
+	/* right: 20px; */
+	bottom: -40px;
+	margin-right: 10px;
+}
+.bell_rounded_inner {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	border-radius: 50%;
+	background-color: #0eb3a9;
+	width: 90px;
+	height: 90px;
+	border: 0.92px solid white;
+	/* padding: 10px; */
+}
+
+.finance_rounded {
+	background-color: #0eb3a9;
+	border-radius: 50%;
+	height: 100px;
+	width: 100px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin-left: -0.5em;
+	margin-top: -4em;
+	box-shadow: 1px 5px rgba(0, 0, 0, 0.438);
+	position: relative;
+	float: right;
+	/* left: 700px; */
+	/* right: 50px; */
+}
+.finance_rounded_inner {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	border-radius: 50%;
+	background-color: #0eb3a9;
+	width: 90px;
+	height: 90px;
+	border: 0.92px solid white;
+	/* padding: 10px; */
+}
+
+.user_rounded {
+	background-color: #0eb3a9;
+	border-radius: 50%;
+	height: 70px;
+	width: 70px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin-left: -0.5em;
+	margin-top: -2em;
+	box-shadow: 1px 5px rgba(0, 0, 0, 0.438);
+}
+.user_rounded_inner {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	border-radius: 50%;
+	background-color: #0eb3a9;
+	width: 60px;
+	height: 60px;
+	border: 0.92px solid white;
 }
 
 /* Performance section */
@@ -45,18 +127,27 @@ h3 {
 	gap: 10px;
 }
 .performance_left {
-	background-color: #a2a0a0;
+	background-color: #1e1e1e0a;
 	flex: 1;
-	/* padding: 10px; */
+	padding: 10px;
+	border-radius: 20px;
 }
 
 .performance_right {
-	background-color: #a2a0a0;
+	background-color: #1e1e1e0a;
 	flex: 1;
-	/* padding: 10px; */
+	padding: 10px;
+	border-radius: 20px;
 }
-.performance_icon_text {
+.performance_icon {
+	width: 40px;
+	height: 40px;
+}
+.performance_icon_group {
 	display: flex;
+	gap: 10px;
+	align-items: start;
+	/* justify-content: first baseline; */
 }
 
 /* Image Section */
@@ -68,15 +159,36 @@ h3 {
 .image_section_detail {
 	background-color: #0eb3a9;
 	padding: 10px;
+	flex: 1;
+	border-radius: 20px;
 }
 
 .image_section_text {
 	display: flex;
+	gap: 2px;
+	align-items: center;
 }
 .image_section_text_number {
-	font-size: 5.625rem;
+	font-size: 3.625rem;
 	font-family: "News Cycle", sans-serif;
 	font-weight: bold;
+	line-height: 1px;
+	margin: 0;
+	/* margin-top: 50px; */
+}
+
+.image_section_text_heading {
+	color: white;
+	font-weight: bold;
+	font-family: "Inter", sans-serif;
+	font-size: 0.9em;
+}
+.image_section_text_heading-text {
+	font-family: "Inter", sans-serif;
+	font-size: 0.6em;
+	font-weight: 500;
+	color: white;
+	margin-top: -1em;
 }
 
 /* Market Info */
