--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ h3 {
 	align-items: center;
 	margin-left: -0.5em;
 	margin-top: -4em;
-	box-shadow: 1px 5px rgba(0, 0, 0, 0.438);
+	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.7);
 	position: relative;
 	/* float: left; */
 	/* left: 10px; */
@@ -81,7 +81,7 @@ h3 {
 	align-items: center;
 	margin-left: -0.5em;
 	margin-top: -3em;
-	box-shadow: 1px 5px rgba(0, 0, 0, 0.438);
+	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.7);
 	position: relative;
 	float: right;
 
@@ -110,7 +110,7 @@ h3 {
 	align-items: center;
 	margin-left: -0.5em;
 	margin-top: -2em;
-	box-shadow: 1px 5px rgba(0, 0, 0, 0.438);
+	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.7);
 }
 .user_rounded_inner {
 	display: flex;
